fix: fixed preloader z-index

--- a/src/assets/scss/_preloader.scss
+++ b/src/assets/scss/_preloader.scss
@@ -4,7 +4,7 @@
     align-items: center;
     position: fixed;
     top: 0;
-    z-index: 99;
+    z-index: 9999;
     width: 100%;
     height: 100vh;
     background-color: #ffffff00;
